--- a/FastLZeroSpikeInference/python/FastLZeroSpikeInference/Projet-TS.ipynb
+++ b/FastLZeroSpikeInference/python/FastLZeroSpikeInference/Projet-TS.ipynb
@@ -2193,7 +2193,9 @@
    "source": [
     "# Testing the \"One-Spike-at-a-Time\" Limitation (Superposition).\n",
     "\n",
-    "Hypothesis: The L0 algorithm might struggle to distinguish between one large spike (a high amplitude event) and two small spikes close together, or it might incorrectly penalize a \"double spike\" as a single event because of the fixed $\\lambda$ penalty."
+    "The paper's model (Equation 1) assumes that calcium concentration jumps instantaneously due to a spike $z_t$1111. The $L_0$ penalty counts the number of non-zero jumps.However, in real biology, neurons can fire bursts (multiple spikes extremely close together, effectively at the same timestep in a 30Hz or 100Hz recording). A \"burst\" of 3 spikes should ideally look like a jump of amplitude $3 \\times A$.+1The paper briefly mentions that at 100Hz, \"a neuron may spike more than once during a single timestep\" and they check if estimated magnitudes correlate with spike counts 2. You can turn this into a rigorous Linearnity/Saturation Test.\n",
+    "\n",
+    "**Hypothesis**: The L0 algorithm might struggle to distinguish between one large spike (a high amplitude event) and two small spikes close together, or it might incorrectly penalize a \"double spike\" as a single event because of the fixed $\\lambda$ penalty."
    ]
   },
   {
